<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:scrollbars="none"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_260sdp"
            android:layout_height="@dimen/_220sdp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/login_illustration" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/registerTitle"
            android:textColor="#0B121F"
            android:textSize="@dimen/_26ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_2sdp"
            android:fontFamily="@font/raleway_semi_bold"
            android:text="@string/registerDescription"
            android:textColor="#0B121F"
            android:textSize="@dimen/_18ssp" />

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/unselected_edittext_background"
            android:drawableStart="@drawable/user_ic"
            android:drawablePadding="@dimen/_12sdp"
            android:drawableTint="#70747E"
            android:fontFamily="@font/raleway_medium"
            android:hint="@string/enterName"
            android:inputType="textPersonName"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="#70747E"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/unselected_edittext_background"
            android:drawableStart="@drawable/email_ic"
            android:drawablePadding="@dimen/_12sdp"
            android:drawableTint="#70747E"
            android:fontFamily="@font/raleway_medium"
            android:hint="@string/enterEmail"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="#70747E"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/unselected_edittext_background"
            android:drawableStart="@drawable/password_ic"
            android:drawablePadding="@dimen/_12sdp"
            android:drawableTint="#70747E"
            android:fontFamily="@font/raleway_medium"
            android:hint="@string/enterPassword"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="#70747E"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/cPasswordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/unselected_edittext_background"
            android:drawableStart="@drawable/password_ic"
            android:drawablePadding="@dimen/_12sdp"
            android:drawableTint="#70747E"
            android:fontFamily="@font/raleway_medium"
            android:hint="Confirm your password"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="#70747E"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:background="@drawable/primary_btn"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:stateListAnimator="@null"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <TextView
            android:id="@+id/signInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/raleway_regular"
            android:gravity="center"
            android:text="@string/signIn"
            android:textAllCaps="false"
            android:textColor="#383838"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>

</ScrollView>