<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ForgetPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/background"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_260sdp"
                android:layout_height="@dimen/_220sdp"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_12sdp"
                android:src="@drawable/login_illustration" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_gravity="center"
                android:fontFamily="@font/raleway_semi_bold"
                android:text="@string/forgottenPassword"
                android:textColor="#101828"
                android:textSize="@dimen/_18ssp" />

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:drawableStart="@drawable/email_ic"
                android:drawableTint="#70747E"
                android:drawablePadding="@dimen/_12sdp"
                android:hint="@string/enterEmail"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/unselected_edittext_background"
                android:fontFamily="@font/raleway_medium"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textColorHint="#70747E"
                android:layout_marginEnd="@dimen/_15sdp"/>

            <Button
                android:id="@+id/resetBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:stateListAnimator="@null"
                android:layout_marginEnd="@dimen/_50sdp"
                android:background="@drawable/primary_btn"
                android:fontFamily="@font/raleway_bold"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <TextView
                android:id="@+id/loginTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/raleway_regular"
                android:gravity="center"
                android:text="@string/getBack"
                android:textAllCaps="false"
                android:textColor="#383838"
                android:textSize="@dimen/_14ssp"  />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>